# rlottie

./: a.out.js  a.out.wasm  meson.build  wasm_build.sh  wasm_cross.txt
src/: meson.build
src/wasm/: meson.build  rlottiewasm.cpp
src/wasm/tg/: common_defs.h  meson.build  wasm.h
src/wasm/tg/crypto/: ctr256.c
src/wasm/tg/libdeflate/: allocator.c  deflate_compress.c  deflate_decompress.c  gzip_decompress.c  zlib_compress.c
src/wasm/tg/utils/: allocator.c
test/: index.js  manifest.webapp  wasm_test.html
